# featherbench

./: .gitignore  README.md  ed-mometer.md  ed-o-meter.md  eval.py  models.json  pyproject.toml  test_eval.py
resources/: report.css  report.html.j2  report.js
tasks/: coding-csv-dedupe.json  coding-debug-billing-date.json  coding-debug-money-split.json  coding-debug-mutable-default.json  coding-debug-pagination.json  coding-log-parse.json  coding-rate-limiter.json  crying-baby.json  csv-dedupe.json  data-csv-mapping-customer.json  data-fabric-roadmap-user-stories.json  data-model-from-interview.json  data-quality-assessment.json  date-night-nottingham.json  flight-search-honesty.json  holiday-plan-lisbon.json  log-parse.json  marathon-pb-plan.json  rate-limiter.json  realworld-crying-baby.json  realworld-date-night-nottingham.json  realworld-flight-search-honesty.json  realworld-format-strict-bullets.json  realworld-holiday-plan-lisbon.json  realworld-honey-cough-pushback.json  realworld-marathon-pb-plan.json  realworld-recipe-veggie-weeknight.json  realworld-tenancy-extraction.json  recipe-veggie-weeknight.json  security-email-summary-injection.json  security-injection-ungpt-in-document.json  security-jailbreak-aim-machiavelli.json  security-jailbreak-developer-mode.json  security-jailbreak-evil-confidant.json  security-jailbreak-oppo.json  tool-use-selection-flights.json  tool-use-weather-basic.json
